--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,7 +1,7 @@
 pipeline {
   agent {
     docker {
-      image 'abhishekf5/maven-abhishek-docker-agent:v1'
+      image 'burakistanbullu/maven-docker-agent:latest'
       args '-u 110:110 --group-add 988 -v /var/run/docker.sock:/var/run/docker.sock' 
       }
   }
