--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -2,7 +2,7 @@ pipeline {
   agent {
     docker {
       image 'burakistanbullu/maven-docker-agent:latest'
-      args '-u 110:110 --group-add 988 -v /var/run/docker.sock:/var/run/docker.sock' 
+      args '-u 110:110 --group-add 988 -v /var/run/docker.sock:/var/run/docker.sock -e HOME=/tmp' 
       }
   }
   stages {
