--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -27,20 +27,22 @@ pipeline {
         }
       }
     }
-     stage('Build and Push Docker Image') {
+    stage('Build and Push Docker Image') {
       environment {
-        DOCKER_IMAGE = "burakistanbullu/java-mvn${BUILD_NUMBER}"
+        DOCKER_REPO = "burakistanbullu/java-mvn"
+        DOCKER_TAG  = "${BUILD_NUMBER}"
         REGISTRY_CREDENTIALS = credentials('docker-cred')
       }
       steps {
         script {
-            sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
-            def dockerImage = docker.image("${DOCKER_IMAGE}")
-            docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
-                dockerImage.push()
-            }
-        }
+          sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_REPO}:${DOCKER_TAG} .'
+          def dockerImage = docker.image("${DOCKER_REPO}:${DOCKER_TAG}")
+          docker.withRegistry('https://index.docker.io/v1/', REGISTRY_CREDENTIALS) {
+            dockerImage.push(DOCKER_TAG)
+            dockerImage.push("latest")
       }
     }
+  }
+}
   }
 }
