--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -31,7 +31,7 @@ pipeline {
       environment {
         DOCKER_REPO = "burakistanbullu/java-mvn"
         DOCKER_TAG  = "${BUILD_NUMBER}"
-        REGISTRY_CREDENTIALS = credentials('docker-cred')
+        REGISTRY_CREDENTIALS ='docker-cred'
       }
       steps {
         script {
