--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: burakistanbullu/java-mvn/:replaceImageTag
+        image: burakistanbullu/java-mvn/:18
         ports:
         - containerPort: 8080
